--- a/Sample01/Views/Content/Index.cshtml
+++ b/Sample01/Views/Content/Index.cshtml
@@ -24,7 +24,7 @@
                 <td>
                     <input type="checkbox" class="done-checkbox" />
                 </td>
-                <td>@item.Id</td>
+                <td>@(item.Id + 1)</td>
                 <td>@item.title</td>
                 <td>@item.content</td>
                 <td>@item.add_time.Humanize()</td>
